Camino only - Bug 566169: Escape location bar input before running it through the regex engine. r/sr=pink